Fixed alignment for staffplan and projects
/stafflans/:user_id and /projects

--- a/app/assets/stylesheets/projects.css.sass
+++ b/app/assets/stylesheets/projects.css.sass
@@ -32,7 +32,7 @@ body#projects.index
           display: inline-block
         .weeks
           position: absolute
-          left: 260px
+          left: 268px
           width: 600px
 
           .month
