--- a/app/assets/stylesheets/staffplans.css.sass
+++ b/app/assets/stylesheets/staffplans.css.sass
@@ -158,7 +158,7 @@ body#staffplans.show
 
         .date-pagination
           position: absolute
-          left: 414px
+          left: 409px
           //left: 308px
           bottom: 10px
           +display-box
